# ad-py

./: .gitignore  .python-version  .travis.yml  Dockerfile  Makefile  README.md  k8s.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  pr.yml
.travis/: adpy-secret.yml.enc  build.sh  deploy.sh  kubeconfig.enc  secret.tar.enc
app/: datasources.py  dates.py  main.py  update.py
app/static/: front.css  photos.js
app/templates/: _feed_items.html  base.html  index.html  notfound.html
tests/: conftest.py  test_cache_headers.py  test_datasources.py  test_dates.py  test_frontend.py  test_main.py  test_update.py
